--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-.shopify
+config.yml .env .DS_Store node_modules/ *.zip
